@@ -2,6 +2,13 @@
 
 Changes with Apache 2.4.26
 
+  *) mod_rewrite: When a substitution is a fully qualified URL, and the 
+     scheme/host/port matches the current virtual host, stop interpreting the 
+     path component as a local path just because the first component of the 
+     path exists in the filesystem.  Adds RewriteOption "LegacyPrefixDocRoot" 
+     to revert to previous behavior. PR60009.
+     [Hank Ibell <hwibell gmail.com>]
+ 
   *) core: ap_parse_form_data() URL-decoding doesn't work on EBCDIC
      platforms. PR61124. [Hank Ibell <hwibell gmail.com>]
 
@@ -65,7 +72,7 @@ Changes with Apache 2.4.26
   *) mod_autoindex: Add IndexOptions UseOldDateFormat to allow the date
      format from 2.2 in the Last Modified column. PR60846.
      [Hank Ibell <hwibell gmail.com>]
-
+ 
   *) core: Add %{REMOTE_PORT} to the expression parser. PR59938
      [Hank Ibell <hwibell gmail.com>]
 
